<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    tools:context=".activities.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/sing_in_main_text"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/ollama_url"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

        
        <EditText
            android:id="@+id/InputUrl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/background_input"
            android:hint="@string/url"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textUri"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"/>

        <TextView
            android:id="@+id/urlError"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:text="@string/not_valid_url"
            android:textColor="@color/error"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/urlErrorFormat"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:text="@string/wrong_url_format"
            android:textColor="@color/error"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            android:visibility="gone"/>


        <TextView
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="Enter the model name"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/InputModel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/background_input"
            android:hint="@string/model_name"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_12ssp"/>

        <TextView
            android:id="@+id/modelError"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:text="@string/model_doesn_t_exist"
            android:textColor="@color/error"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            android:visibility="gone"/>

        <Button
            android:id="@+id/buttonEnter"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="Enter"
            android:textColor="@color/white"
            android:textStyle="bold"/>

    </LinearLayout>

</ScrollView>